--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^5.10.0",
     "@mantine/dates": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
+    "@types/google.fonts": "^1.0.5",
     "@vitejs/plugin-react": "^4.2.0",
     "dayjs": "^1.11.7",
     "focus-trap-react": "^9.0.2",
